Cleanup + start/stop others + force next